--- a/Ed.BudgetVisualizer/Pages/Data.razor
+++ b/Ed.BudgetVisualizer/Pages/Data.razor
@@ -56,7 +56,7 @@
                 <th scope="col">Origin</th>
                 <th scope="col">Description</th>
                 <th scope="col">Category</th>
-                <th scope="col"><span class="oi oi-ban"></span></th>
+                <th scope="col"><span class="oi oi-ban" title="Exclude transaction from diagram"></span></th>
             </tr>
         </thead>
         <tbody>
@@ -68,9 +68,9 @@
                     <td class="nobreak">@t.Currency @t.Sum.ToString("N2")</td>
                     <td>@t.Origin</td>
                     <td>@t.Description</td>
-                    <td>@t.Category</td>
+                    <td>@Categories[t.CategoryId].Name</td>
                     <td>
-                        <div class="form-check form-check-inline">
+                        <div class="form-check form-check-inline" title="Exclude transaction from diagram">
                             <input type="checkbox" class="form-check-input position-static" checked="@t.IsExcluded" @onchange="async () => await OnToggleExcluded(t)" />
                         </div>
                     </td>
@@ -87,6 +87,7 @@
     private bool categoriesRefreshing = false;
     private List<Transaction> Transactions;
     private List<Transaction> ArchivedTransactions;
+    private Dictionary<int, Category> Categories;
 
     /// <summary>
     /// Additional parameters for the file upload control.
@@ -102,6 +103,9 @@
     /// </summary>
     protected override async Task OnInitializedAsync()
     {
+        Categories = (await Http.GetJsonAsync<List<Category>>("data/categories.json"))
+            .ToDictionary(key => key.CategoryId, val => val);
+
         Transactions = await Storage.GetItem<List<Transaction>>(key);
         if (Transactions == null)
         {
@@ -124,7 +128,7 @@
     private async Task OnFileSelection(IFileListEntry[] files)
     {
         int parsedTransactionCount = 0;
-        List<Category> categories = await Http.GetJsonAsync<List<Category>>("data/categories.json");
+        List<Match> matches = await Http.GetJsonAsync<List<Match>>("data/matches.json");
 
         // Parse transactions and add them to the transaction list
         foreach (var file in files)
@@ -132,7 +136,7 @@
             List<Transaction> parsedTransactions = await Parser.ParseFile(file.Data);
             if (parsedTransactions.Any())
             {
-                ParserLogic.UpdateTransactionCategories(parsedTransactions, categories);
+                ParserLogic.UpdateTransactionCategories(parsedTransactions, matches);
                 Transactions.AddRange(parsedTransactions);
                 parsedTransactionCount += parsedTransactions.Count;
             }
@@ -200,10 +204,10 @@
     private async Task OnRefreshCategories()
     {
         categoriesRefreshing = true;
-        List<Category> categories = await Http.GetJsonAsync<List<Category>>("data/categories.json");
-        ParserLogic.UpdateTransactionCategories(Transactions, categories);
+        List<Match> matches = await Http.GetJsonAsync<List<Match>>("data/matches.json");
+        ParserLogic.UpdateTransactionCategories(Transactions, matches);
         await Storage.SetItem<List<Transaction>>(key, Transactions);
-        status = $"Categories refreshed. App had {categories.Count} category filters in the database.";
+        status = $"Categories refreshed. App had {matches.Count} category filters in the database.";
         categoriesRefreshing = false;
     }
 
