Working ML model

--- a/Ed.BudgetVisualizer.Net8/Pages/Data.razor
+++ b/Ed.BudgetVisualizer.Net8/Pages/Data.razor
@@ -124,17 +124,20 @@
         int parsedTransactionCount = 0;
         var matches = await Http.GetFromJsonAsync<List<Match>>("data/matches.json");
 
+        // TODO: Choose whether to use ML or regexes
+        // https://github.com/bartczernicki/Test-Blazor-MLNet-WASMHost
+        var assembly = typeof(Ed.BudgetVisualizer.Logic.BudgetVisualizer).Assembly;
+        var resource = assembly.GetManifestResourceStream($"Ed.BudgetVisualizer.Logic.BudgetVisualizer.mlnet");
+        ParserLogic.LoadMlModel(resource);
+
         // Parse transactions and add them to the transaction list
         foreach (var file in e.GetMultipleFiles())
         {
-            // var ms = new MemoryStream();
-            // await file.OpenReadStream().CopyToAsync(ms);
-            // ms.Position = 0;
-
             var parsedTransactions = await Parser.ParseFile(file.OpenReadStream());
             if (parsedTransactions.Any())
             {
-                ParserLogic.UpdateTransactionCategories(parsedTransactions, matches);
+                //ParserLogic.UpdateTransactionCategories(parsedTransactions, matches);
+                ParserLogic.UpdateTransactionCategories(parsedTransactions);
                 Transactions?.AddRange(parsedTransactions);
                 parsedTransactionCount += parsedTransactions.Count;
             }
@@ -203,7 +206,7 @@
     {
         categoriesRefreshing = true;
         var matches = await Http.GetFromJsonAsync<List<Match>>("data/matches.json");
-        ParserLogic.UpdateTransactionCategories(Transactions, matches);
+        //ParserLogic.UpdateTransactionCategories(Transactions, matches);
         await Storage.SetItemAsync<List<Transaction>?>(key, Transactions);
         status = $"Categories refreshed. App had {matches?.Count} category filters in the database.";
         categoriesRefreshing = false;
