--- a/Ed.BudgetVisualizer/_Imports.razor
+++ b/Ed.BudgetVisualizer/_Imports.razor
@@ -1,12 +1,13 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Ed.BudgetVisualizer
-@using Ed.BudgetVisualizer.Shared
 @using Ed.BudgetVisualizer.Models
 @using Ed.BudgetVisualizer.Logic
-@using BlazorInputFile
-@using System.IO
-@using Blazor.Extensions.Storage
+@using Ed.BudgetVisualizer
+@using Ed.BudgetVisualizer.Layout
+@using Blazored.LocalStorage
