--- a/Ed.BudgetVisualizer/Pages/Diagrams.razor
+++ b/Ed.BudgetVisualizer/Pages/Diagrams.razor
@@ -1,8 +1,9 @@
 ﻿@page "/diagrams"
-
-@inject LocalStorage Storage
 @inject IJSRuntime JsRuntime
-@inject HttpClient Http
+@inject Ed.BudgetVisualizer.Logic.ParserLogic Parser
+@inject Blazored.LocalStorage.ILocalStorageService Storage
+
+<PageTitle>Diagrams</PageTitle>
 
 <h1>Diagrams</h1>
 
@@ -19,30 +20,29 @@
 
 @code {
     private string key = "transactions";
-    private List<Transaction> Transactions;
-    private DiagramViewModel Model;
-    private Dictionary<int, Category> Categories;
+    private List<Transaction>? Transactions;
+    private DiagramViewModel? Model;
+    private Dictionary<int, Category>? Categories;
 
     /// <summary>
     /// Handles the component initialization event.
     /// </summary>
     protected override async Task OnInitializedAsync()
     {
-        Categories = (await Http.GetJsonAsync<List<Category>>("data/categories.json"))
-            .ToDictionary(key => key.CategoryId, val => val);
+        Categories = Parser.GetCategories().ToDictionary(key => key.CategoryId, val => val);
 
         // Load stored transactions
-        Transactions = await Storage.GetItem<List<Transaction>>(key);
+        Transactions = await Storage.GetItemAsync<List<Transaction>>(key);
 
         // If there aren't any, initialize the storage
         if (Transactions == null)
         {
-            await Storage.SetItem<List<Transaction>>(key, new List<Transaction>());
-            Transactions = await Storage.GetItem<List<Transaction>>(key);
+            await Storage.SetItemAsync<List<Transaction>>(key, new List<Transaction>());
+            Transactions = await Storage.GetItemAsync<List<Transaction>>(key);
         }
 
         // If there are transactions loaded, generate the diagrams
-        if (Transactions.Any())
+        if (Transactions != null && Transactions.Any())
         {
             Model = Transactions.ToDiagramModel(Categories);
             await JsRuntime.InvokeAsync<bool>("RenderDiagrams", Model.Diagrams);
